--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -8,7 +8,7 @@ RUN npm run build
 
 # Stage 2: Serve the application with Windows/IIS
 # Use a minimal Windows Server image
-FROM mcr.microsoft.com/windows/nanoserver:ltsc2022
+FROM mcr.microsoft.com/windows/servercore:ltsc2022-amd64 AS final
 
 # Install IIS and configure it to serve the Vite 'dist' folder
 # (This is highly complex and usually requires a custom setup script)
